[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
ash = "0.33.3"
ash-window = "0.7"
cgmath = "0.18"
image = "0.23"
tobj = "3.2"
winit = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.23.1"
cocoa = "0.24"
objc  = "0.2.5"
